--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sevendb
+spring.datasource.url=jdbc:mysql://localhost:3306/sevendb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
