--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,48 @@
+# ===============================
+# = DATA SOURCE
+# ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/sevendb?useSSL=false
+spring.datasource.platform=mysql
+spring.datasource.schema=classpath:/db/schema-mysql.sql
+spring.datasource.data=classpath:/db/data-mysql.sql
+spring.datasource.initialize=true
 spring.datasource.username=root
 spring.datasource.password=root
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
 
+# ===============================
+# = JPA / HIBERNATE
+# ===============================
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
-logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-server.port = 8888
+# ===============================
+# = Thymeleaf configurations
+# ===============================
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
+# ===============================
+# = Tomcat configurations
+# ===============================
+server.port=8888
+
+# ===============================
+# = Email configurations
+# ===============================
+spring.application.name="SEVEN"
+# Email (MailProperties)
+# spring.mail.default-encoding=UTF-8 # Default MimeMessage encoding.
+# spring.mail.host= # SMTP server host. For instance `smtp.example.com`
+# spring.mail.jndi-name= # Session JNDI name. When set, takes precedence to others mail settings.
+# spring.mail.password= # Login password of the SMTP server.
+# spring.mail.port= # SMTP server port.
+# spring.mail.properties.*= # Additional JavaMail session properties.
+# spring.mail.protocol=smtp # Protocol used by the SMTP server.
+# spring.mail.test-connection=false # Test that the mail server is available on startup.
+# spring.mail.username= # Login user of the SMTP server.
