--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.application.name="SEVEN"
+spring.mandatory-file-encoding=utf-8
+
 # ===============================
 # = DATA SOURCE
 # ===============================
@@ -17,7 +20,7 @@ spring.datasource.validationQuery = SELECT 1
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
-#logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.SQL=debug
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
@@ -41,7 +44,6 @@ spring.queries.roles-query=select u.email, r.role from user u inner join user_ro
 # ===============================
 # = Email configurations
 # ===============================
-spring.application.name="SEVEN"
 # Email (MailProperties)
 # spring.mail.default-encoding=UTF-8 # Default MimeMessage encoding.
 # spring.mail.host= # SMTP server host. For instance `smtp.example.com`
