--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # ===============================
 # = Thymeleaf configurations
 # ===============================
-spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
 # ===============================
