--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,6 +42,11 @@ spring.queries.users-query=select email, password from user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
 
 # ===============================
+# = Application info
+# ===============================
+app.version=1.0.0.SNAPSHOT
+
+# ===============================
 # = Email configurations
 # ===============================
 # Email (MailProperties)
