--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,7 @@ spring.queries.roles-query=select u.email, r.role from user u inner join user_ro
 # = Application info
 # ===============================
 app.version=1.0.0.SNAPSHOT
+spring.thymeleaf.prefix=classpath:/templates/
 
 # ===============================
 # = Email configurations
