--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,12 @@ app.version=1.0.0.SNAPSHOT
 spring.thymeleaf.prefix=classpath:/templates/
 
 # ===============================
+# = Logging
+# ===============================
+logging.level.org.springframework.web=ERROR
+logging.level.com.seven.test=DEBUG
+
+# ===============================
 # = Email configurations
 # ===============================
 # Email (MailProperties)
