--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=debug
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+# disable hibernate validation due to js validate on client side
+#spring.jpa.properties.javax.persistence.validation.mode=none
 
 # ===============================
 # = Thymeleaf configurations
