--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sevendb?useSSL=false
 spring.datasource.platform=mysql
 spring.datasource.schema=classpath:/db/schema-mysql.sql
 spring.datasource.data=classpath:/db/data-mysql.sql
-spring.datasource.initialize=true
+# TODO set true before production
+spring.datasource.initialize=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.testWhileIdle = true
