--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.platform=mysql
 spring.datasource.schema=classpath:/db/schema-mysql.sql
 spring.datasource.data=classpath:/db/data-mysql.sql
 # TODO set true before production
-spring.datasource.initialize=false
+spring.datasource.initialize=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.testWhileIdle = true
