datatable plugin added

--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <!--webjars-->
+        <!--UI-->
         <webjars-bootstrap.version>3.3.7-1</webjars-bootstrap.version>
         <webjars-jquery.version>3.1.1-1</webjars-jquery.version>
+        <webjars-datatables.version>1.10.15</webjars-datatables.version>
+        <webjars-datetimepicker.version>2.5.4</webjars-datetimepicker.version>
         <nekohtml.version>1.9.22</nekohtml.version>
         <thymeleaf.version>3.0.6.RELEASE</thymeleaf.version>
         <!--hibernate-->
@@ -82,6 +84,30 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>datatables</artifactId>
+            <version>${webjars-datatables.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>jquery</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>datetimepicker</artifactId>
+            <version>${webjars-datetimepicker.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.webjars.bower</groupId>
+                    <artifactId>jquery</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <!-- nekohtml -->
         <dependency>
             <groupId>net.sourceforge.nekohtml</groupId>
