added formatters and converters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,9 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # disable hibernate validation due to js validate on client side
 #spring.jpa.properties.javax.persistence.validation.mode=none
 
+# instead of JacksonObjectMapper
+#spring.jackson.serialization.fail-on-empty-beans=false
+
 # ===============================
 # = Thymeleaf configurations
 # ===============================
