--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <hibernate-commons.version>5.0.1.Final</hibernate-commons.version>
         <hibernate-validator.version>5.4.1.Final</hibernate-validator.version>
         <jsoup.version>1.10.3</jsoup.version>
+        <jackson-json.version>2.8.9</jackson-json.version>
         <!--thymeleaf-->
         <thymeleaf.version>3.0.6.RELEASE</thymeleaf.version>
         <thymeleaf-extras-java8time.version>3.0.0.RELEASE</thymeleaf-extras-java8time.version>
@@ -64,6 +65,30 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
             <version>${jsoup.version}</version>
+        </dependency>
+
+        <!--JSON-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
+        <!--Hibernate specific types and properties (including lazy-loading aspects)-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5</artifactId>
+            <version>${jackson-json.version}</version>
+        </dependency>
+        <!--Java 8 Date & Time API data types-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson-json.version}</version>
         </dependency>
 
         <!--UI-->
