--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,7 @@ server.port=8888
 # = Spring Security / Queries for AuthenticationManagerBuilder
 # ==============================================================
 spring.queries.users-query=select email, password from user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.queries.roles-query=select u.email, r.role from users u inner join user_roles ur on(u.id=ur.user_id) inner join role r on(ur.role_id=r.id) where u.email=?
 
 # ===============================
 # = Application info
