--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.datasource.data=classpath:/db/data-mysql.sql
 spring.datasource.initialize=true
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
+spring.datasource.tomcat.test-while-idle=true
+spring.datasource.tomcat.validationQuery = SELECT 1
 
 # ===============================
 # = JPA / HIBERNATE
@@ -22,7 +22,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=none
 #logging.level.org.hibernate.SQL=debug
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 # disable hibernate validation due to js validate on client side
 #spring.jpa.properties.javax.persistence.validation.mode=none
