--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,13 @@
             <artifactId>spring-context-support</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>4.2.3.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
         <!--Thymeleaf-->
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
