--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,7 @@ spring:
       test-on-borrow: true
       remove-abandoned: true
       test-on-connect: true
+      remove-abandoned-timeout: 600
 
   # ===============================
   # = JPA / HIBERNATE
