--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <file.encoding>UTF-8</file.encoding>
         <java.version>1.8</java.version>
-        <skipTests>false</skipTests>
+        <skipTests>true</skipTests>
         <!--UI-->
         <webjars-bootstrap.version>3.3.7-1</webjars-bootstrap.version>
         <webjars-jquery.version>3.1.1-1</webjars-jquery.version>
@@ -74,11 +75,6 @@
         </dependency>
 
         <!--JSON-->
-<!--        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>${jackson-json.version}</version>
-        </dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -257,7 +253,7 @@
 
     <build>
         <plugins>
-            <!-- Компиляция -->
+            <!-- Compiling -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
