--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,14 +8,14 @@ spring:
   # ===============================
   datasource:
     #url: jdbc:mysql://10.10.192.101:3306/sevendb?useSSL=false
-    url: jdbc:mysql://localhost:3306/sevendb?useSSL=false
+    url: mysql://b4c8cdd4df6da0:1feb6f37@us-cdbr-iron-east-05.cleardb.net/heroku_b610c580a82293d?reconnect=true
     platform: mysql
     schema: classpath:/db/schema-mysql.sql
     data: classpath:/db/data-mysql.sql
     # set to false after 1st run
     initialize: true
-    username: root
-    password: root
+    username: b4c8cdd4df6da0
+    password: 1feb6f37
     tomcat:
       test-while-idle: true
       validationQuery: SELECT 1
