--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -84,7 +84,7 @@ spring:
 # = Tomcat
 # ===============================
 server:
-  port: 8888
+  port: ${PORT:8080}
   tomcat:
     uri-encoding: UTF-8
 
