--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   # ===============================
   datasource:
     #url: jdbc:mysql://10.10.192.101:3306/sevendb?useSSL=false
-    url: jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_b610c580a82293d?reconnect=true
+    url: jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_b610c580a82293d?reconnect=true?useSSL=true
     platform: mysql
     schema: classpath:/db/schema-mysql.sql
     data: classpath:/db/data-mysql.sql
@@ -83,10 +83,10 @@ spring:
 # ===============================
 # = Tomcat
 # ===============================
-server:
-  port: ${PORT:8080}
-  tomcat:
-    uri-encoding: UTF-8
+#server:
+#  port: ${PORT:8080}
+#  tomcat:
+#    uri-encoding: UTF-8
 
 # ===============================
 # = LOG
