--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,10 +83,10 @@ spring:
 # ===============================
 # = Tomcat
 # ===============================
-#server:
-#  port: ${PORT:8080}
-#  tomcat:
-#    uri-encoding: UTF-8
+server:
+  port: ${PORT:8080}
+  tomcat:
+    uri-encoding: UTF-8
 
 # ===============================
 # = LOG
