email doesn't send. all created owners have password 'password'

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,11 +59,11 @@ spring:
   # ===============================
   # = HTTP/HTTPS
   # ===============================
-  http:
-    encoding:
-      charset: UTF-8
-      enabled: true
-      force: true
+#  http:
+#    encoding:
+#      charset: UTF-8
+#      enabled: true
+#      force: true
 
   # ===============================
   # = Email configurations
