--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,11 +59,14 @@ spring:
   # ===============================
   # = HTTP/HTTPS
   # ===============================
-#  http:
-#    encoding:
-#      charset: UTF-8
-#      enabled: true
-#      force: true
+  http:
+    encoding:
+      charset: UTF-8
+      enabled: true
+      force: true
+      force-request: true
+      force-response: true
+      mapping: windows-1251
 
   # ===============================
   # = Email configurations
