email doesn't send. all created owners have password 'password'

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   # ===============================
   datasource:
     #url: useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&
-    url: jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_b610c580a82293d?useUnicode=false&characterEncoding=windows-1251&reconnect=true&useSSL=false
+    url: jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_b610c580a82293d?useUnicode=true&characterEncoding=cp1251&reconnect=true&useSSL=false
     platform: mysql
     schema: classpath:/db/schema-mysql.sql
     data: classpath:/db/data-mysql.sql
