--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,7 +86,7 @@ spring:
 # = Tomcat
 # ===============================
 server:
-  port: 8888
+  port: ${PORT:8888}
   tomcat:
     uri-encoding: UTF-8
 
