--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,8 +7,7 @@ spring:
   # = DATA SOURCE
   # ===============================
   datasource:
-    #url: jdbc:mysql://10.10.192.101:3306/sevendb?useSSL=false
-    url: jdbc:mysql://localhost:3306/sevendb?useSSL=false
+    url: jdbc:mysql://localhost:3306/sevendb?useSSL=false&useUnicode=yes&characterEncoding=utf8&characterSetResults=utf8
     platform: mysql
     schema: classpath:/db/schema-mysql.sql
     data: classpath:/db/data-mysql.sql
